--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,9 @@
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
+.scroll::-webkit-scrollbar {
+  display: none;
+}
 
 @keyframes logo-spin {
   from {
